# shtm

./: CMakeLists.txt  README.md
include/: functions.hpp  shtm.hpp
src/: custom.cpp  error.cpp  main.cpp  rc.cpp  shtm.cpp  task.cpp
